tests/neg/i18058.scala
trait F:
  type A

type G = (f: ? <: F) => f.A // error
