tests/neg/i18058.check
-- Error: tests/neg/i18058.scala:4:21 ----------------------------------------------------------------------------------
4 |type G = (f: ? <: F) => f.A // error
  |                     ^
  |                     invalid new prefix  <: F cannot replace f.type in type f.A
